--- a/contact/index.html
+++ b/contact/index.html
@@ -40,6 +40,8 @@
         <h1>Contact</h1>
         <p>Email: david.soane(at)outlook(dot)com</p>
         <p>Github: <a href="https://github.com/44David">44David</a></p>
+        <p>HuggingFace: <a href="https://huggingface.co/44David">44David</a></p>
+
 
     </main>
 
