--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
 
   <main>
 
-    <h1>Hi, I'm David</h1>
-    <p>I'm an ML Researcher interested in Neural Symbolic Reasoning, Reasoning models and reinforcement learning</p>
-    <p>I post my research, projects and thoughts on theoretical deep learning, computational mathematics and applications on my <a href="https://davids.bearblog.dev/blog/">Blog</a></p>
 
+    <h1>Hi, I'm David</h1>
+    <p>I'm an ML Researcher interested in Neural Symbolic Reasoning, Reasoning models and Reinforcement Learning</p>
+    <p>I post my research, projects and thoughts on theoretical deep learning, computational mathematics and applications on my <a href="https://davids.bearblog.dev/blog/">blog</a></p>
+
+    <!-- <p><a href="/daily-emails/">Get curated research papers emailed daily at ~4:30pm CST</a></p> -->
 
   </main>
 
