modified home page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,26 @@
     <p>I'm an ML Researcher interested in Neural Symbolic Reasoning, Reasoning models and Reinforcement Learning</p>
     <p>I post my research, projects and thoughts on theoretical deep learning, computational mathematics and applications on my <a href="https://davids.bearblog.dev/blog/">blog</a></p>
 
-    <!-- <p><a href="/daily-emails/">Get curated research papers emailed daily at ~4:30pm CST</a></p> -->
+    <h3>Skills</h3>
+      <h4>Deep Learning & Research</h4>
+      <ul>
+        <li>Implemented transformer architecture and self-attention mechanisms from scratch</li>      
+        <li>Python/Pytorch model optimization, training & fine tuning large models</li>
+        <li>Mathematical focus on linear algebra & learning algorithms</li>
+        <li>Understanding and implementing deep learning research papers</li>
+      </ul>
+
+      <h4>Systems</h4>
+      <ul>
+        <li>CUDA/C++ for creating high performance models</li>
+        <li>Linux & Server Management</li>
+      </ul>
+      
+      <h4>Software Engineering</h4>
+      <ul>
+        <li>Modern web technologies (Next.js, React, Postrges, Tailwindcss</li>
+        <li>Rust built GUI applications</li>
+      </ul>
 
   </main>
 
