--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 
       <h4>Systems</h4>
       <ul>
-        <li>CUDA/C++ for creating high performance models</li>
+        <li>CUDA/C++ for kernel creation and optimizations</li>
         <li>Linux & Server Management</li>
       </ul>
       
       <h4>Software Engineering</h4>
       <ul>
-        <li>Modern web technologies (Next.js, React, Postrges, Tailwindcss</li>
+        <li>Modern web technologies (Next.js, React, Postgres, Tailwindcss</li>
         <li>Rust built GUI applications</li>
       </ul>
 
