--- a/projects/index.html
+++ b/projects/index.html
@@ -41,7 +41,7 @@
         <h1>Projects</h1>
         <p>Github: <a href="https://github.com/44David">44David</a></p>
         <p><a href="https://github.com/44David/OpenWebLM-77M">WebLM-v1-80M</a> Lightweight informational language model</p>
-        <p><a href="https://github.com/44David/hyprwindow">hyprwindow</a> GTK Rust built minimal application and manager manager for <a href="https://hypr.land/">Hyprland</a></p>
+        <p><a href="https://github.com/44David/hyprwindow">hyprwindow</a> GTK Rust built minimal application and manager for <a href="https://hypr.land/">Hyprland</a></p>
         <p><a href="https://github.com/44David/Notate">Notate</a> Image Annotation Service, annotate images in seconds</p>
         <p><a href="https://github.com/Arusai-Dev/dante-app">Dante</a> Truly free, fast and simple to use learning app based on proved spaced repetition learning algorithms </p>
         
@@ -49,7 +49,7 @@
 
         <h1>Articles I've Written</h1>
         <p><a href="https://davids.bearblog.dev/mathematical-foundation-of-self-attention/">Mathematical Foundations of Self-Attention Mechanisms</a></p>
-        <p><a href="https://davids.bearblog.dev/">WebLM-v1-80M: Mathematical Formulation and Architectural Analysis of Decoder-Only Models </a></p>
+        <p><a href="https://davids.bearblog.dev/mathematical-and-architectural-analysis-of-decoder-only-transformers/">Mathematical and Architectural Analysis of Decoder-Only Transformers</a></p>
         <p><a href="https://davids.bearblog.dev/">LoRa: Low-Rank Adaptation of Language Modelling</a></p>
         <p><a href="https://davids.bearblog.dev/">Neuroevolution in GPU cluster space</a></p>
         <p><a href="https://davids.bearblog.dev/">Policy Based Reinforcement Learning</a></p>
