--- a/studying/index.html
+++ b/studying/index.html
@@ -40,9 +40,7 @@
         <p><a href="https://www.deeplearningbook.org/">Deep Learning Book</a></p>
         <p><a href="http://incompleteideas.net/book/the-book-2nd.html">Reinforcement Learning Book</a></p>
         <p><a href="https://arxiv.org/pdf/2501.14787">Matrix Calculus (Arxiv 2501.14787)</p>
-        <p><a href="https://arxiv.org/pdf/1707.06347">Proximal Policy Optimization (Arxiv 1707.06347)</p>
-        <p><a href="https://cdn.openai.com/better-language-models/language_models_are_unsupervised_multitask_learners.pdf">Language Models are Unsupervised Multitask Learners</p>
-        
+        <p><a href="https://arxiv.org/pdf/2402.03300">Deepseek Math & GRPO reinforcement learning</p>
 
     </main>
 
