--- a/index.html
+++ b/index.html
@@ -20,49 +20,24 @@
 <body class="home">
   
   <header>
-    <a class="title" href="/">
-      <h1>David</h1>
-    </a>
     <nav>
-            <a href="/">Home</a>
-            <a href="https://davids.bearblog.dev/blog/">Blog</a>
-            <a href="/projects/">Projects</a>
-            <a href="/studying/">What I'm Reading/Studying</a>
-            <a href="/contact/">Contact</a>
+      <a href="/">Home</a>
+      <a href="/projects/">Projects</a>
     </nav>
   </header>
 
 
+  <h1>David</h1>
+  <p>I build and break down deep learning systems.</p>
+  <p>I work on from scratch architectures, CUDA kernel inference optimization and reinforcement learning.</p>
+  
+  <p>founder of <a href="https://embodiedthinking.org">The Embodied Thinking Lab</a> a small independent lab exploring intelligent systems in the physical world</p>
 
-  <main>
+  <a href="https://github.com/44David">github</a>
+  <a href="https://huggingface.co/44David">huggingface</a>
+  <a href="https://davids.bearblog.dev/blog/">blog</a>
 
-
-    <h1>Hi, I'm David</h1>
-    <p>I'm an ML Researcher interested in Neural Symbolic Reasoning, Reasoning models and Reinforcement Learning</p>
-    <p>I post my research, projects and thoughts on theoretical deep learning, computational mathematics and applications on my <a href="https://davids.bearblog.dev/blog/">blog</a></p>
-
-    <h3>Skills</h3>
-      <h4>Deep Learning & Research</h4>
-      <ul>
-        <li>Implemented transformer architecture and self-attention mechanisms from scratch</li>      
-        <li>Python/Pytorch model optimization, training & fine tuning large models</li>
-        <li>Mathematical focus on linear algebra & learning algorithms</li>
-        <li>Understanding and implementing deep learning research papers</li>
-      </ul>
-
-      <h4>Systems</h4>
-      <ul>
-        <li>CUDA/C++ for kernel creation and optimizations</li>
-        <li>Linux & Server Management</li>
-      </ul>
-      
-      <h4>Software Engineering</h4>
-      <ul>
-        <li>Modern web technologies (Next.js, React, Postgres, Tailwindcss</li>
-        <li>Rust built GUI applications</li>
-      </ul>
-
-  </main>
+  <p>david.soane[at]outlook[dot]com</p>
 
     
 </body>
