--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
     
-    <title>David</title>
+    <title>david</title>
 
 
-    <meta name="title" content="David">
+    <meta name="title" content="david">
     <meta name="description" content="">
 
+    <link rel="icon" type="image/x-icon" href="favicon.jpg">
     <link rel="stylesheet" href="index.css">
 
   
@@ -31,7 +32,9 @@
   <p>I build and break down deep learning systems.</p>
   <p>I work on from scratch architectures, CUDA kernel inference optimization and reinforcement learning.</p>
   
-  <p>founder of <a href="https://embodiedthinking.org">The Embodied Thinking Lab</a> a small independent lab exploring intelligent systems in the physical world</p>
+
+  <p>founder of <a href="https://embodiedthinking.org">The Embodied Thinking Lab</a> a small independent lab exploring intelligence in physical robotics</p>
+
 
   <a href="https://github.com/44David">github</a>
   <a href="https://huggingface.co/44David">huggingface</a>
