--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 
   <p>founder of <a href="https://embodiedthinking.org">The Embodied Thinking Lab</a> a small independent lab exploring intelligence in physical robotics</p>
 
+  <p>what i'm interested in</p>
+  <ul>
+    <li>applied machine learning at scale</li>
+    <li>world models, reasoning and what intelligence truly means</li>
+  </ul>
 
   <a href="https://github.com/44David">github</a>
   <a href="https://huggingface.co/44David">huggingface</a>
