--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <p>I work on from scratch architectures, CUDA kernel inference optimization and reinforcement learning.</p>
   
 
-  <p>founder of <a href="https://embodiedthinking.org">The Embodied Thinking Lab</a> a small independent lab exploring intelligence in physical robotics</p>
+  <p>co-founder of <a href="https://embodiedthinking.org">The Embodied Thinking Lab</a> a small independent lab exploring intelligence in physical robotics</p>
 
   <p>what i'm interested in</p>
   <ul>
