--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@
 
     <p><a href="https://github.com/stars/44David/lists/reinforcement-learning">Proximal Policy Optimization (PPO) & Critic-Actor agent architecture</a><p>
     <ul>
-      <li>Implemented a reusable continuous PPO from scratch, with policy gradient clipping and GAE for advantage estimation</li>
+      <li>Implemented a reusable continuous and discrete PPO from scratch, with policy gradient clipping and GAE for advantage estimation</li>
       <li>Built and optimized reinforcement learning models using the critic-actor architecture for tasks like CartPole-v1 and HalfCheetah-v5</li>
     </ul>
 
