--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p>what i'm interested in</p>
   <ul>
     <li>applied machine learning at scale</li>
-    <li>world models, reasoning and what intelligence truly means</li>
+    <li>causal world models, reasoning and what intelligence truly means</li>
   </ul>
 
   <a href="https://github.com/44David">github</a>
