--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@
     <meta name="title" content="david">
     <meta name="description" content="">
     
-    <link rel="icon" type="image/x-icon" href="favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="../favicon.jpg">
     <link rel="stylesheet" href="../index.css">
   
 </head>
